Closed
Bug 358871
Opened 19 years ago
Closed 19 years ago
"ASSERTION: The cellposition should have been cleared" and "ASSERTION: replacing a non dead cell is a memory leak" with colspan=0 and other spans
Categories
(Core :: Layout: Tables, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: bernd_mozilla)
References
Details
(Keywords: assertion, memory-leak, testcase)
Attachments
(2 files)
|
261 bytes,
application/xhtml+xml
|
Details | |
|
1.29 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: The cellposition should have been cleared: 'origData->IsDead()', file /Users/admin/trunk/mozilla/layout/tables/nsCellMap.cpp, line 1373
###!!! ASSERTION: replacing a non dead cell is a memory leak: 'origData->IsDead()', file /Users/admin/trunk/mozilla/layout/tables/nsCellMap.cpp, line 1410
| Reporter | ||
Comment 1•19 years ago
|
||
Comment 2•19 years ago
|
||
This actually crashes for me on Windows XP.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061030 Minefield/3.0a1 - Build ID: 2006103004
Anyone else seeing thuis?
probably your build is too old ;-), the checkin to see the assert instead of the crash was at 2006-10-30 11:21
Comment on attachment 244240 [details] [diff] [review]
patch
handle new cells identical as the code section above does.
Attachment #244240 -
Flags: superreview?(bzbarsky)
Attachment #244240 -
Flags: review?(bzbarsky)
Comment 6•19 years ago
|
||
Comment on attachment 244240 [details] [diff] [review]
patch
I suppose, but is it documented somewhere what those two booleans mean? If so, do those comments match what we actually do? That is, do we document that if the cell is due to being spanned by a colspan but _not_ a rowspan we should not set ZeroRowSpan to true?
Attachment #244240 -
Flags: superreview?(bzbarsky)
Attachment #244240 -
Flags: superreview+
Attachment #244240 -
Flags: review?(bzbarsky)
Attachment #244240 -
Flags: review+
this was fixed on trunk 2006-11-01 10:45
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•