mark only cells where the colspan/rowspan offset is != 0 as zero colspans/rowspans if those properties apply bug 358871 r/sr=bzbarsky